# floppachat

./: .gitignore  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  tinyclient.py  tox.ini
docs/: conf.py  index.rst
src/floppachat/: api.py  chat.py  db.py  messages.py  rooms.py  tinyclient.py  users.py
